--- a/index.html
+++ b/index.html
@@ -18,12 +18,24 @@
   <div id="app">
     <h1>Tournoi</h1>
     <p>Tournoi est une application pour créer un tableau de rencontres et de classement d'équipes.</p>
-    <p>Pour commencer, entrez le nombre d'équipes :</p>
-    <form>
-      <input type="number">
-      <button>C'est parti !</button>
-      <p class="msgError">Vous devez mettre au moins 3 équipes</p>
+
+    <form class="formNumberOfTeams">
+      <div class="inputContainer">
+        <label for="PushNumberofTeams">Pour commencer, entrez le nombre d'équipes :</label>
+        <input type="number" id="PushNumberofTeams">
+        <button class="btnNumberOfTeams">C'est parti !</button>
+        <p class="msgError">Vous devez mettre au moins 3 équipes</p>
+      </div>
     </form>
+
+    <form class="formPutTeams">
+      <div class="inputTeamsContainer">
+        <!-- <button class="btnPutTeams">Créer les tableaux de rencontres</button> -->
+      </div>
+
+    </form>
+
+    <!-- <div class="inputTeams"></div> -->
 
 
   </div>
