Affichage des rencontres avec inputs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="app">
     <h1>Tournoi</h1>
-    <p>Tournoi est une application pour créer un tableau de rencontres et de classement d'équipes.</p>
+    <p>Tournoi est une application pour générer un tableau de rencontres et de classement d'équipes.</p>
 
     <form class="formNumberOfTeams">
       <div class="inputContainer">
@@ -35,8 +35,28 @@
 
     </form>
 
-    <!-- <div class="inputTeams"></div> -->
+    <form class="formResults">
+      <!-- <div class="inputTeamsContainer">
+        <button class="btnPutTeams">Créer les tableaux de rencontres</button>
+      </div> -->
+      <!-- <div class="day">
+        <form class="formDay">
+          <p>Journée 1</p>
+          <div class="match">
+            <label for="score1">a</label>
+            <input type="number" id="score1">
+            <input type="number" id="score1">
+            <label for="score2">b</label>
+          </div>
+          <div class="match">
+            <label for="score1">c</label>
+            <input type="number" id="score1">
+            <input type="number" id="score1">
+            <label for="score2">d</label>
+          </div>
+      </div> -->
 
+    </form>
 
   </div>
   <script type="module" src="/main.js"></script>
