problème de génération du tableau des rencontres en fonction nombre d'équipes Réglé !

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <form class="formNumberOfTeams">
         <div class="inputContainer">
           <label for="pushNumberofTeams">Pour commencer, entrez le nombre d'équipes :</label>
-          <input type="number" id="pushNumberofTeams">
+          <input type="number" id="pushNumberofTeams" required>
           <button class="btnNumberOfTeams">C'est parti !</button>
           <p class="msgError">Vous devez mettre au moins 3 équipes.</p>
         </div>
@@ -33,7 +33,6 @@
       <form class="formPutTeams">
         <div class="inputTeamsContainer">
           <p>Saisissez le nom des équipes</p>
-          <!-- <button class="btnPutTeams">Créer les tableaux de rencontres</button> -->
         </div>
 
       </form>
